--- a/libs-parent/lib-a/pom.xml
+++ b/libs-parent/lib-a/pom.xml
@@ -14,7 +14,7 @@
     <version>0-SNAPSHOT</version>
 
 	<properties>
-		<docker-client.version>6.1.1-PA1</docker-client.version>
+		<docker-client.version>6.1.1</docker-client.version>
     </properties>
 
 	<dependencyManagement>
